tests/cases/generics/errors/generic-function-pointer-mismatch.ari
fn identity[T](value: T) -> T {
  value
}

fn main() -> i64 {
  let op: fn(i64) -> bool = identity;
  if op(1) {
    return 1;
  }
  return 0;
}
